--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 astroid==2.1.0
+atomicwrites==1.3.0
+attrs==18.2.0
 autoenv==1.0.0
 Click==7.0
 Flask==1.0.2
@@ -8,7 +10,12 @@ Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
+more-itertools==5.0.0
+pep8==1.7.1
+pluggy==0.8.1
+py==1.7.0
 pylint==2.2.2
+pytest==4.2.0
 python-dotenv==0.10.1
 six==1.12.0
 Werkzeug==0.14.1
