--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 source venv/bin/activate 
 export FLASK_APP=run.py
-export SECRET="politico"
-export APP_SETTINGS="development"
-export DATABASE_URL="todo" 
+export FLASK_ENV=development
+export SECRET=politico
+export APP_SETTINGS=development
+export DATABASE_URL=todo
