--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ cache: pip
 install:
   - pip install -r requirements.txt
 script:
-  - pytest --cov=app
+  - pytest --cov=app/v1
 after_success:
   - coveralls
