--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,26 @@
 language: python
+
 python:
   - "3.6"
 cache: pip
+
 install:
   - pip install -r requirements.txt
+
+services:
+  - postgresql
+
+before_script:
+  - psql -c "CREATE DATABASE politico_db;" -U postgres
+  - psql -c "CREATE DATABASE politico_test_db;" -U postgres
+  - psql -c "CREATE USER politico WITH PASSWORD 'politica';" -U postgres
+
+env:
+  - DATABASE_URL="dbname='politico_db' host='127.0.0.1' port='5432' user='politico' password='politica'"
+  - DATABASE_TEST_URL="dbname='politico_test_db' host='127.0.0.1' port='5432' user='politico' password='politica'"
+
 script:
   - pytest --cov=app/v1
+
 after_success:
   - coveralls
