--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ coverage==4.5.2
 coveralls==1.5.1
 docopt==0.6.2
 Flask==1.0.2
+Flask-JWT==0.3.2
+Flask-JWT-Extended==3.17.0
 gunicorn==19.9.0
 idna==2.8
 isort==4.3.4
@@ -23,6 +25,7 @@ pluggy==0.8.1
 psycopg2==2.7.7
 psycopg2-binary==2.7.7
 py==1.7.0
+PyJWT==1.4.2
 pylint==2.2.2
 pytest==4.2.0
 pytest-cov==2.6.1
