--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Click==7.0
 coverage==4.5.2
 coveralls==1.5.1
 docopt==0.6.2
+flasgger==0.9.2
 Flask==1.0.2
 Flask-JWT==0.3.2
 Flask-JWT-Extended==3.17.0
@@ -16,9 +17,11 @@ idna==2.8
 isort==4.3.4
 itsdangerous==1.1.0
 Jinja2==2.10
+jsonschema==2.6.0
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
+mistune==0.8.4
 more-itertools==5.0.0
 pep8==1.7.1
 pluggy==0.8.1
@@ -30,6 +33,7 @@ pylint==2.2.2
 pytest==4.2.0
 pytest-cov==2.6.1
 python-dotenv==0.10.1
+PyYAML==3.13
 requests==2.21.0
 six==1.12.0
 urllib3==1.24.1
